--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <!-- links -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <!-- css -->
-    <link rel="stylesheet" href="/scss/style.css">
+    <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
     <header class="header" data-aos="header">
         <div class="container">
             <h1>
-                <img class="logo header__logo" src="/img/logo.png" alt="AULA F75">
+                <img class="logo header__logo" src="img/logo.png" alt="AULA F75">
             </h1>
             <ul class="header__offer">
                 <li class="header__item header__item_start">75% Gasket Wireless Mechanical Keyboard</li>
